# 2016-Vision

./: .gitignore  .gitignore.swp  2016-Vision  CMakeCache.txt  CMakeLists.txt  MJPGWriter.cpp  MJPGWriter.cpp.save  Makefile  MyFreenect.cpp  NetworkTable.h  README.md  cameraServer.cpp  cameraServer.hpp  cmake_install.cmake  cvFreenect.cpp  cvFreenect.hpp  ninjaVision.cpp  ninjaVision.cpp.save  ntcore_cpp.h  test  test.cpp  vision.conf
Coprocessor/: deploy.sh
Coprocessor/Kinect/: Makefile  README.MD  startup.sh
Coprocessor/Kinect/src/c/: conversions.c  kinect.c  main.c  socket.c
Coprocessor/Kinect/src/cpp/: driver_station.cpp  kinect_cv.cpp
Coprocessor/Kinect/src/headers/: conversions.h  driver_station.hpp  kinect.h  kinect_cv.hpp  main.h  socket.h
Coprocessor/Splines/: Makefile  README.MD  startup.sh
Coprocessor/Splines/src/impl/c/: main.c
Coprocessor/Splines/src/impl/headers/: conversions.h  sleep.h  socket.h
ntcore/: libntcore.so.1
src/: cvFreenect.cpp  cvFreenect.hpp  jpgStream.cpp  mutex.cpp  mutex.hpp  ninjaVision.cpp  test.cpp  vision.cpp
